--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
 @media screen and (min-width: 1280px) {
     body {
         margin: 0;
         background-color: #000;
         color: #eee;
-        font-family: Poppins;
+        font-family: Arial;
         font-size: 12px;
     }
 
@@ -73,7 +71,7 @@
 
     .carousel .list .item .author {
         font-weight: bold;
-        letter-spacing: 10px;
+        letter-spacing: 4px;
     }
 
     /* thumbail */
@@ -265,6 +263,7 @@
         margin: 0;
         color: #eee;
     }
+
     /* carousel */
     .carousel {
         height: 100vh;
@@ -280,7 +279,7 @@
         inset: 0 0 0 0;
     }
 
-    .carousel .list .item .img-container{
+    .carousel .list .item .img-container {
         width: 100vw;
         height: 100vh;
     }
@@ -321,7 +320,7 @@
         border: none;
         background-color: #eee;
         letter-spacing: 3px;
-        font-family: Poppins;
+        font-family: Arial;
         font-weight: 500;
     }
 
